--- a/index.html
+++ b/index.html
@@ -3,47 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نظام تسجيل البصمات</title>
+    <title>تسجيل الدخول - نظام تسجيل البصمات</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>نظام تسجيل البصمات</h1>
+        <h1>تسجيل الدخول</h1>
 
         <!-- قسم تسجيل الدخول -->
         <div id="login-section">
-            <h2>تسجيل الدخول</h2>
             <input type="text" id="login-username" placeholder="اسم المستخدم">
             <input type="password" id="login-password" placeholder="كلمة المرور">
             <button id="login-btn">تسجيل الدخول</button>
         </div>
 
-        <!-- قسم تسجيل المستخدم -->
-        <div id="register-section" style="display: none;">
-            <h2>تسجيل مستخدم جديد</h2>
-            <input type="text" id="name" placeholder="الاسم">
-            <input type="text" id="userId" placeholder="رقم الهوية">
-            <select id="gender">
-                <option value="male">ذكر</option>
-                <option value="female">أنثى</option>
-            </select>
-            <input type="text" id="nationality" placeholder="الجنسية">
-            <input type="password" id="register-password" placeholder="كلمة المرور">
-            <button id="register-user-btn">تسجيل المستخدم</button>
-        </div>
-
-        <!-- قسم تسجيل البصمة -->
-        <div id="camera-section" style="display: none;">
-            <h2>تسجيل البصمة</h2>
-            <video id="camera" autoplay></video>
-            <button id="capture-btn">التقاط البصمة</button>
-            <div id="instructions"></div>
-        </div>
+        <!-- رسالة الخطأ -->
+        <div id="error-message" style="color: red; display: none;"></div>
     </div>
 
-    <script src="database.js"></script>
     <script src="auth.js"></script>
-    <script src="fingerprint.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
